--- a/src/modules/tutti/Tutti.module.scss
+++ b/src/modules/tutti/Tutti.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   position: relative;
-  padding-top: calc(var(--headerHeight) + 110px);
+  padding-top: calc(var(--headerHeight) + 120px);
 
   &::after {
     content: '';
